--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -87,7 +87,7 @@ jobs:
         cache: 'maven'
 
     - if: matrix.build-mode == 'manual'  
-      run: mvn --no-transfer-progress verify
+      run: mvn clean install
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
